syntax = "proto3";

option csharp_namespace = "IntegrationAPI.Protos";
import "Protos/registerHospital.proto";

service gRPCHospitalService{
	rpc registerHospital(RegisterHospitalRequest) returns (RegisterHospitalResponse);
}